Bugfix extra scrollbar for smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,14 @@
 .App {
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
+}
+
+@media only screen and (max-device-width: 500px) {
+  .App {
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+  }
 }
 
 h1 {
